issue-1: added favicon

--- a/src/GetLocalsFrontend.html
+++ b/src/GetLocalsFrontend.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Title</title>
+    <title>GetLocals</title>
+    <link rel="canonical" href="http://example.com/example" />
 </head>
 <body>
     <div id="root"></div>
